[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "API for an expense tracker"
authors = ["Florent Haxhiu <florenthaxhiu03@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}
pyjwt = "^2.9.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
